[gd_scene load_steps=33 format=3 uid="uid://b58768cfmmgbq"]

[ext_resource type="Script" uid="uid://c33k0ltxhrpuo" path="res://script/menu.gd" id="1_15se8"]
[ext_resource type="Texture2D" uid="uid://bkbce0vqdxf12" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoulHeaderA-Sheet.png" id="3_1qlln"]
[ext_resource type="FontFile" uid="uid://cttiyfnemjlwx" path="res://asset/font/Everyday_Tiny_Bold_Original.ttf" id="3_vi6sp"]
[ext_resource type="Texture2D" uid="uid://cxo06hnpen10p" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesA-Sheet.png" id="4_wd6lm"]
[ext_resource type="Texture2D" uid="uid://dp783qu7ogqqf" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesE-Sheet.png" id="5_8of67"]
[ext_resource type="Texture2D" uid="uid://c2kxmeevylte3" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250425portraitFrame-Sheet.png" id="6_8of67"]
[ext_resource type="Texture2D" uid="uid://cueatlo23wx10" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragonTabA-Sheet.png" id="6_qp55b"]
[ext_resource type="FontFile" uid="uid://bfshvmg5hsuua" path="res://asset/font/PixelOperator8-Bold.ttf" id="7_pgh6j"]
[ext_resource type="Texture2D" uid="uid://eskabl6wixm4" path="res://asset/sprite/FreeCuteTileset/BG1.png" id="7_wmmby"]
[ext_resource type="Texture2D" uid="uid://c8e20xq1kyb1" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonBootsFrame.png" id="8_pgh6j"]
[ext_resource type="Texture2D" uid="uid://bij6posn3caot" path="res://asset/sprite/FreeCuteTileset/BG2.png" id="8_qp55b"]
[ext_resource type="Texture2D" uid="uid://dpj4a5ld6xyb8" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonChestFrame.png" id="9_wmmby"]
[ext_resource type="Texture2D" uid="uid://bl1rtd1mdkmft" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragon9SlicesB.png" id="10_bh37c"]
[ext_resource type="Texture2D" uid="uid://bxk6muv7meui" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonHeadFrame.png" id="10_qp55b"]
[ext_resource type="FontFile" uid="uid://dhvwmgcsmbfsf" path="res://asset/font/Everyday_Tiny_Blocky.ttf" id="11_6i5tc"]
[ext_resource type="Texture2D" uid="uid://xhtju1ikrq5i" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragonHeaderA.png" id="11_g0o0q"]
[ext_resource type="Texture2D" uid="uid://8dayqgjjgnvj" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonNeckFrame.png" id="11_wbutu"]
[ext_resource type="Texture2D" uid="uid://dvmwsvhhtfapr" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonPantsFrame.png" id="12_6i5tc"]
[ext_resource type="FontFile" uid="uid://bfd8lxmo20ddl" path="res://asset/font/Everyday_Tiny_Bold.ttf" id="12_ro420"]
[ext_resource type="Shader" uid="uid://d3tyrfwlw2c1g" path="res://asset/shader/LightweightPixelPerfectOutline.gdshader" id="13_026qx"]
[ext_resource type="Texture2D" uid="uid://c8k6ddh3ncco7" path="res://asset/sprite/RPG UI pack (by Franuka)/Individual files/1x/Buttons/Button_03A_Normal.png" id="13_t04dq"]
[ext_resource type="Texture2D" uid="uid://d2540epq7e1bv" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonRingFrame.png" id="14_8pci4"]
[ext_resource type="Texture2D" uid="uid://bmctru0y3fgv7" path="res://asset/sprite/RPG UI pack (by Franuka)/Individual files/1x/Buttons/Button_03A_Pressed.png" id="14_sd7bm"]
[ext_resource type="Texture2D" uid="uid://dmyj6laixmnnt" path="res://asset/sprite/RPG UI pack (by Franuka)/Individual files/1x/Buttons/Button_03A_Selected.png" id="15_b08iv"]
[ext_resource type="Texture2D" uid="uid://ck04j6jmvyoqa" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragon9SlicesD.png" id="16_dow5n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8of67"]
shader = ExtResource("13_026qx")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_time_scale = 0.0
shader_parameter/use_monochrome = false
shader_parameter/monochrome_color = Color(0.7764706, 0.7764706, 0.7764706, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb5j1"]
atlas = ExtResource("3_1qlln")

[sub_resource type="AtlasTexture" id="AtlasTexture_6fejx"]
atlas = ExtResource("4_wd6lm")

[sub_resource type="AtlasTexture" id="AtlasTexture_wmmby"]
atlas = ExtResource("5_8of67")

[sub_resource type="AtlasTexture" id="AtlasTexture_ahy0u"]
atlas = ExtResource("6_8of67")
region = Rect2(0, 0, 48, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh37c"]
atlas = ExtResource("6_8of67")
region = Rect2(0, 42, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_026qx"]
atlas = ExtResource("6_qp55b")
region = Rect2(45, 0, 33, 22)

[node name="menu" type="Node2D"]
script = ExtResource("1_15se8")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
z_index = 999
offset_right = 540.0
offset_bottom = 360.0
mouse_filter = 2

[node name="button_container" type="HBoxContainer" parent="."]
z_index = 20
offset_left = 57.0
offset_top = 148.0
offset_right = 481.0
offset_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="start_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("8_pgh6j")
stretch_mode = 0

[node name="setting_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("9_wmmby")
stretch_mode = 0

[node name="upgrade_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("10_qp55b")
stretch_mode = 0

[node name="gallery_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("11_wbutu")
stretch_mode = 0

[node name="statistics_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("12_6i5tc")
stretch_mode = 0

[node name="quit_button" type="TextureButton" parent="button_container"]
z_index = 20
material = SubResource("ShaderMaterial_8of67")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture_normal = ExtResource("14_8pci4")
stretch_mode = 0

[node name="Node2D" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D"]
z_index = 20
offset_left = 15.0
offset_top = 67.0
offset_right = 524.0
offset_bottom = 121.0
texture = SubResource("AtlasTexture_pb5j1")
patch_margin_left = 30
patch_margin_top = 16
patch_margin_right = 29
patch_margin_bottom = 14

[node name="NinePatchRect2" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_left = 15.0
offset_top = 50.0
offset_right = 525.0
offset_bottom = 285.0
texture = SubResource("AtlasTexture_6fejx")
patch_margin_left = 30
patch_margin_top = 18
patch_margin_right = 29
patch_margin_bottom = 14

[node name="NinePatchRect3" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_left = 21.0
offset_top = 140.0
offset_right = 520.0
offset_bottom = 219.0
texture = SubResource("AtlasTexture_wmmby")
patch_margin_left = 30
patch_margin_top = 31
patch_margin_right = 30
patch_margin_bottom = 30

[node name="Node2D" type="Node2D" parent="Node2D"]
position = Vector2(43, 127)

[node name="TextureRect" type="TextureRect" parent="Node2D/Node2D"]
z_index = 50
offset_right = 48.0
offset_bottom = 18.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AtlasTexture_ahy0u")

[node name="TextureRect2" type="TextureRect" parent="Node2D/Node2D"]
z_index = 50
offset_top = 51.0
offset_right = 48.0
offset_bottom = 81.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AtlasTexture_bh37c")

[node name="TextureRect3" type="TextureRect" parent="Node2D"]
z_index = 50
offset_left = 536.0
offset_right = 569.0
offset_bottom = 22.000002
rotation = 1.5707964
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_026qx")

[node name="Label" type="Label" parent="Node2D"]
z_index = 50
offset_left = 181.0
offset_top = 234.0
offset_right = 412.0
offset_bottom = 262.1111
theme_override_fonts/font = ExtResource("7_pgh6j")
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D"]
offset_right = 540.0
offset_bottom = 360.0
mouse_filter = 2
texture = ExtResource("7_wmmby")

[node name="TextureRect2" type="TextureRect" parent="Node2D"]
offset_right = 541.0
offset_bottom = 361.0
mouse_filter = 2
texture = ExtResource("8_qp55b")

[node name="change_player" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 152.0
offset_top = 109.0
offset_right = 152.0
offset_bottom = 109.0
mouse_behavior_recursive = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D/change_player"]
z_index = 800
layout_mode = 0
offset_right = 224.0
offset_bottom = 127.0
mouse_filter = 0
texture = ExtResource("10_bh37c")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 25

[node name="NinePatchRect2" type="NinePatchRect" parent="Node2D/change_player"]
z_index = 820
layout_mode = 0
offset_left = -4.0
offset_top = 15.0
offset_right = 227.0
offset_bottom = 46.0
mouse_filter = 0
texture = ExtResource("11_g0o0q")
patch_margin_left = 24
patch_margin_top = 12
patch_margin_right = 24
patch_margin_bottom = 19

[node name="Label" type="Label" parent="Node2D/change_player/NinePatchRect2"]
z_index = 830
z_as_relative = false
layout_mode = 0
offset_left = 43.0
offset_top = 4.0
offset_right = 197.0
offset_bottom = 20.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 8
text = "Choose your name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/change_player"]
layout_mode = 0
offset_left = 35.0
offset_top = 44.0
offset_right = 193.0
offset_bottom = 92.0
mouse_filter = 0

[node name="player_name_container" type="VBoxContainer" parent="Node2D/change_player/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_constants/separation = 1

[node name="player_template" type="Button" parent="Node2D/change_player/ScrollContainer/player_name_container"]
z_index = 820
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "template"

[node name="new_player_button" type="TextureButton" parent="Node2D/change_player"]
z_index = 820
layout_mode = 0
offset_left = 32.0
offset_top = 98.0
offset_right = 80.0
offset_bottom = 114.0
texture_normal = ExtResource("13_t04dq")
texture_pressed = ExtResource("14_sd7bm")
texture_hover = ExtResource("15_b08iv")

[node name="Label2" type="Label" parent="Node2D/change_player/new_player_button"]
z_index = 830
z_as_relative = false
layout_mode = 0
offset_left = 15.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 12.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "New"
horizontal_alignment = 1
vertical_alignment = 1

[node name="delete_new_player" type="TextureButton" parent="Node2D/change_player"]
z_index = 820
layout_mode = 0
offset_left = 92.0
offset_top = 98.0
offset_right = 140.0
offset_bottom = 114.0
texture_normal = ExtResource("13_t04dq")
texture_pressed = ExtResource("14_sd7bm")
texture_hover = ExtResource("15_b08iv")

[node name="Label2" type="Label" parent="Node2D/change_player/delete_new_player"]
z_index = 830
z_as_relative = false
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 39.0
offset_bottom = 12.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "Delete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cancel_new_player" type="TextureButton" parent="Node2D/change_player"]
z_index = 820
layout_mode = 0
offset_left = 153.0
offset_top = 98.0
offset_right = 201.0
offset_bottom = 114.0
texture_normal = ExtResource("13_t04dq")
texture_pressed = ExtResource("14_sd7bm")
texture_hover = ExtResource("15_b08iv")

[node name="Label2" type="Label" parent="Node2D/change_player/cancel_new_player"]
z_index = 830
z_as_relative = false
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 39.0
offset_bottom = 12.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_new_player" type="Control" parent="Node2D/change_player"]
z_index = 850
anchors_preset = 0
offset_left = 57.0
offset_top = 45.0
offset_right = 57.0
offset_bottom = 45.0
mouse_filter = 1
mouse_behavior_recursive = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D/change_player/add_new_player"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 51.0
mouse_filter = 0
texture = ExtResource("16_dow5n")
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="new_player_edit_line" type="LineEdit" parent="Node2D/change_player/add_new_player"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 103.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
placeholder_text = "New name"

[node name="create_new_player_button" type="TextureButton" parent="Node2D/change_player/add_new_player"]
z_index = 850
z_as_relative = false
layout_mode = 0
offset_left = 6.0
offset_top = 28.0
offset_right = 54.0
offset_bottom = 44.0
texture_normal = ExtResource("13_t04dq")
texture_pressed = ExtResource("14_sd7bm")
texture_hover = ExtResource("15_b08iv")

[node name="Label2" type="Label" parent="Node2D/change_player/add_new_player/create_new_player_button"]
z_index = 850
z_as_relative = false
layout_mode = 0
offset_left = 15.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 12.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "OK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cancel_create_player_button" type="TextureButton" parent="Node2D/change_player/add_new_player"]
z_index = 850
z_as_relative = false
layout_mode = 0
offset_left = 57.0
offset_top = 28.0
offset_right = 105.0
offset_bottom = 44.0
texture_normal = ExtResource("13_t04dq")
texture_pressed = ExtResource("14_sd7bm")
texture_hover = ExtResource("15_b08iv")

[node name="Label3" type="Label" parent="Node2D/change_player/add_new_player/cancel_create_player_button"]
z_index = 850
z_as_relative = false
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 39.0
offset_bottom = 12.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("12_ro420")
theme_override_font_sizes/font_size = 4
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
z_index = 25
offset_top = 71.0
offset_right = 540.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0.27252728, 0.43844068, 0.81566894, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_vi6sp")
theme_override_font_sizes/font_size = 20
text = "Resal Auto Chess"
horizontal_alignment = 1
vertical_alignment = 1

[node name="version" type="Label" parent="."]
z_index = 25
offset_left = 497.0
offset_top = 353.0
offset_right = 541.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("3_vi6sp")
theme_override_font_sizes/font_size = 4
text = "V0.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="current_player" type="Button" parent="."]
z_index = 50
offset_left = 525.0
offset_top = 5.000002
offset_right = 580.7468
offset_bottom = 33.0
rotation = 1.5707964
theme_override_colors/font_color = Color(0.25331977, 0.08070449, 0.007527854, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("11_6i5tc")
theme_override_font_sizes/font_size = 8
text = "Resal"
flat = true

[connection signal="pressed" from="button_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="button_container/upgrade_button" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="button_container/gallery_button" to="." method="_on_gallery_button_pressed"]
[connection signal="pressed" from="button_container/quit_button" to="." method="_on_quit_button_pressed"]
